# surge-analysis-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  VERSION_INFO.json  batch_surge_analyzer.py  ci.yml  config.py  future_value_dexin.py  install.py  mcp.json  pyproject.toml  quick_start.py  requirements.txt  surge_analysis_mcp_server.py  test_mcp_server.py  universal_surge_analyzer.py
scripts/: __init__.py  prepare_release.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_mcp_server.py
