[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surge-analysis-mcp"
version = "1.1.0"
description = "专业的股票暴涨分析 MCP 服务"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Stock Analysis Team", email = "analysis@example.com"},
]
keywords = ["stock", "analysis", "mcp", "surge", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    "akshare>=1.12.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/F415643/surge-analysis-mcp"
Repository = "https://github.com/F415643/surge-analysis-mcp"
Issues = "https://github.com/F415643/surge-analysis-mcp/issues"

[project.scripts]
surge-analyzer = "universal_surge_analyzer:main"
surge-mcp-server = "surge_analysis_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true